--- a/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
+++ b/SadAgregator/View/cells/PostCell/PostTableViewCell.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -24,38 +25,32 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p91-BU-613" userLabel="topView">
                                 <rect key="frame" x="16" y="8" width="331" height="20"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="24-115" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="SSR-4S-9BF">
-                                        <rect key="frame" x="0.0" y="-5" width="70" height="30"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="70" id="E2F-Hx-S5I"/>
-                                        </constraints>
+                                    <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="24-115" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="SSR-4S-9BF">
+                                        <rect key="frame" x="0.0" y="-5" width="54.5" height="30"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Самвел Ерзнкян " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F9Q-xC-IMV">
-                                        <rect key="frame" x="78" y="-5" width="167" height="30"/>
+                                        <rect key="frame" x="62.5" y="-5" width="189" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" red="0.63528621200000002" green="0.63529002670000001" blue="0.63529998060000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="700 руб" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="2D9-dG-k9E">
-                                        <rect key="frame" x="253" y="0.5" width="70" height="19.5"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="70" id="D2u-i6-MNS"/>
-                                        </constraints>
+                                    <label opaque="NO" userInteractionEnabled="NO" tag="3" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="700 руб" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="2D9-dG-k9E">
+                                        <rect key="frame" x="259.5" y="0.0" width="63.5" height="20"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                         <color key="textColor" red="0.34954202179999999" green="0.5620516539" blue="0.4352820516" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5rN-K9-HCB" userLabel="Vendor Label Button">
-                                        <rect key="frame" x="0.0" y="-5" width="70" height="30"/>
+                                        <rect key="frame" x="0.0" y="-5" width="54.5" height="30"/>
                                         <connections>
                                             <action selector="vendorLabelTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="GIU-pY-FWJ"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qtq-yb-8sg" userLabel="By Label Button">
-                                        <rect key="frame" x="78" y="-5" width="167" height="30"/>
+                                        <rect key="frame" x="62.5" y="-5" width="189" height="30"/>
                                         <connections>
                                             <action selector="byLabelTapped:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="l7s-41-GyT"/>
                                         </connections>
@@ -68,7 +63,6 @@
                                     <constraint firstItem="2D9-dG-k9E" firstAttribute="centerY" secondItem="p91-BU-613" secondAttribute="centerY" id="6CW-sP-VED"/>
                                     <constraint firstItem="5rN-K9-HCB" firstAttribute="centerX" secondItem="SSR-4S-9BF" secondAttribute="centerX" id="8XB-1r-jjM"/>
                                     <constraint firstAttribute="height" constant="20" id="Ebr-1S-eRx"/>
-                                    <constraint firstItem="qtq-yb-8sg" firstAttribute="bottom" secondItem="F9Q-xC-IMV" secondAttribute="bottom" id="FUq-xV-rVC"/>
                                     <constraint firstItem="5rN-K9-HCB" firstAttribute="centerY" secondItem="SSR-4S-9BF" secondAttribute="centerY" id="Jdr-Bk-9Wx"/>
                                     <constraint firstItem="5rN-K9-HCB" firstAttribute="trailing" secondItem="SSR-4S-9BF" secondAttribute="trailing" id="Pov-YS-j2m"/>
                                     <constraint firstItem="SSR-4S-9BF" firstAttribute="centerY" secondItem="p91-BU-613" secondAttribute="centerY" id="Qh5-EG-azZ"/>
@@ -78,7 +72,6 @@
                                     <constraint firstItem="F9Q-xC-IMV" firstAttribute="centerY" secondItem="p91-BU-613" secondAttribute="centerY" id="lWX-JW-0vp"/>
                                     <constraint firstItem="qtq-yb-8sg" firstAttribute="centerX" secondItem="F9Q-xC-IMV" secondAttribute="centerX" id="ldR-vz-mLr"/>
                                     <constraint firstItem="5rN-K9-HCB" firstAttribute="top" secondItem="SSR-4S-9BF" secondAttribute="top" id="qpm-g8-rcu"/>
-                                    <constraint firstItem="5rN-K9-HCB" firstAttribute="bottom" secondItem="SSR-4S-9BF" secondAttribute="bottom" id="szp-vw-6Gi"/>
                                     <constraint firstItem="qtq-yb-8sg" firstAttribute="top" secondItem="F9Q-xC-IMV" secondAttribute="top" id="uIa-ex-4L4"/>
                                     <constraint firstItem="SSR-4S-9BF" firstAttribute="leading" secondItem="p91-BU-613" secondAttribute="leading" id="zfl-Yy-xQx"/>
                                     <constraint firstItem="2D9-dG-k9E" firstAttribute="leading" secondItem="F9Q-xC-IMV" secondAttribute="trailing" constant="8" id="zim-VP-mEa"/>
@@ -151,9 +144,9 @@
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a3x-eB-Twm">
-                                        <rect key="frame" x="146" y="2.5" width="87" height="30"/>
+                                        <rect key="frame" x="146" y="2.5" width="139" height="30"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="87" id="bBy-ZP-hUI"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="87" id="bBy-ZP-hUI"/>
                                         </constraints>
                                         <state key="normal" title="См. пост VK">
                                             <color key="titleColor" red="0.19642570610000001" green="0.48198187349999999" blue="0.73336809869999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -191,6 +184,7 @@
                                     <constraint firstItem="xR8-b0-bBu" firstAttribute="centerY" secondItem="Us6-U2-kyD" secondAttribute="centerY" id="R7T-cD-hqb"/>
                                     <constraint firstAttribute="height" constant="35" id="Xe5-Nd-QvD"/>
                                     <constraint firstItem="uPt-GC-e9h" firstAttribute="leading" secondItem="7EA-pY-GDv" secondAttribute="leading" id="jUI-MK-vWP"/>
+                                    <constraint firstItem="xR8-b0-bBu" firstAttribute="leading" secondItem="a3x-eB-Twm" secondAttribute="trailing" constant="8" id="ljp-pF-9wX"/>
                                     <constraint firstItem="a3x-eB-Twm" firstAttribute="centerY" secondItem="7EA-pY-GDv" secondAttribute="centerY" id="naF-ST-wSH"/>
                                     <constraint firstItem="xR8-b0-bBu" firstAttribute="centerX" secondItem="Us6-U2-kyD" secondAttribute="centerX" id="shl-s8-dW5"/>
                                     <constraint firstItem="Us6-U2-kyD" firstAttribute="centerY" secondItem="7EA-pY-GDv" secondAttribute="centerY" id="zkZ-9c-l5A"/>
@@ -273,7 +267,7 @@
                 <outlet property="vigruzitLabel" destination="SzE-iO-8hf" id="tyw-6J-Oie"/>
                 <outlet property="vigruzitView" destination="zhE-qm-INE" id="l8m-1S-Uaz"/>
             </connections>
-            <point key="canvasLocation" x="52.898550724637687" y="316.74107142857139"/>
+            <point key="canvasLocation" x="52.898550724637687" y="316.07142857142856"/>
         </tableViewCell>
     </objects>
     <resources>
