No results anymore

--- a/SadAgregator/View/Base.lproj/Main.storyboard
+++ b/SadAgregator/View/Base.lproj/Main.storyboard
@@ -7874,8 +7874,8 @@
         <segue reference="hIu-vB-ACx"/>
         <segue reference="yR4-7g-u1L"/>
         <segue reference="UT5-6g-K7A"/>
-        <segue reference="FEb-r5-o0p"/>
-        <segue reference="4nT-MZ-xAF"/>
+        <segue reference="5co-KY-lmW"/>
+        <segue reference="CqK-8r-UgW"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="camera.fill" catalog="system" width="128" height="94"/>
